# PlaneGame

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
Classes/: AppDelegate.cpp  BulletSprite.cpp  BulletSprite.h  BulletSprite2.cpp  EnemyInfo.h  EnemyLayer.cpp  EnemyLayer.h  EnemySprite.cpp  EnemySprite.h  GameScene.cpp  GameScene.h  PigSprite.cpp  PigSprite.h  PlaneLayer.cpp  PlaneLayer.h
PlaneGame/Classes/: AppDelegate.cpp  AppDelegate.h  BulletSprite.cpp  BulletSprite.h  EnemyInfo.h  EnemyLayer.cpp  EnemyLayer.h  EnemySprite.cpp  EnemySprite.h  GameScene.cpp
PlaneGame/proj.win32/: cpp-empty-test.vcxproj  cpp-empty-test.vcxproj.filters  main.cpp
cocos/: CMakeLists.txt  cocos2d.h
cocos/2d/: CCActionCamera.cpp  CCActionInterval.cpp  CCCamera.cpp  CCCamera.h  CCCameraBackgroundBrush.h  CCDrawNode.cpp  CCDrawNode.h  CCFontFreeType.cpp  CCGrabber.cpp  CCLabelBMFont.cpp  CCLabelBMFont.h  CCLabelTTF.cpp  CCLabelTTF.h  CCLayer.cpp  CCLayer.h  CCNode.cpp  CCNode.h  CCScene.cpp  CCScene.h  CMakeLists.txt
cocos/base/: CCConfiguration.cpp  CCConfiguration.h  CCController-linux-win32.cpp  CCController.h  CCDirector.cpp  ccConfig.h  ccUtils.cpp  ccUtils.h
cocos/deprecated/: CCArray.cpp  CCDeprecated.h
cocos/platform/: CCGL.h  CCGLView.cpp  CCGLView.h
cocos/renderer/: CCFrameBuffer.cpp  CCGLProgramCache.cpp  CCGLProgramState.cpp  CCMaterial.cpp  CCMaterial.h  CCQuadCommand.cpp  CCQuadCommand.h  CCRenderState.cpp  CCRenderState.h  CCRenderer.cpp  CCRenderer.h  CMakeLists.txt  ccShader_Label_df.frag  ccShader_Label_df_glow.frag  ccShader_PositionColorLengthTexture.frag  ccShader_PositionColorLengthTexture.vert  ccShader_PositionColorTextureAsPointsize.vert  ccShaders.cpp
cocos/scripting/lua-bindings/: CMakeLists.txt
cocos/scripting/lua-bindings/auto/: lua_cocos2dx_auto.cpp  lua_cocos2dx_auto.hpp  lua_cocos2dx_ui_auto.cpp
cocos/scripting/lua-bindings/auto/api/: Camera.lua  CardinalSplineBy.lua  CardinalSplineTo.lua  Director.lua  DrawNode.lua  GLView.lua  Grid3DAction.lua  LayerMultiplex.lua  Node.lua  RenderState.lua  Scene.lua  TiledGrid3DAction.lua  lua_cocos2dx_auto_api.lua
cocos/scripting/lua-bindings/manual/: CCComponentLua.cpp  CCLuaBridge.cpp  CCLuaBridge.h  CCLuaEngine.cpp  CCLuaEngine.h  CCLuaStack.cpp  CCLuaStack.h  CCLuaValue.cpp  Cocos2dxLuaLoader.cpp  Cocos2dxLuaLoader.h  LuaBasicConversions.cpp  LuaBasicConversions.h  lua_module_register.cpp  lua_module_register.h  tolua_fix.cpp
cocos/scripting/lua-bindings/manual/cocos2d/: lua_cocos2dx_deprecated.cpp  lua_cocos2dx_manual.cpp
cocos/scripting/lua-bindings/script/: init.lua
cocos/scripting/lua-bindings/script/cocos2d/: DeprecatedCocos2dFunc.lua
cocos/ui/: CocosGUI.h  Extension.cpp  UIAbstractCheckButton.cpp  UIButton.cpp  UIImageView.cpp  UILayout.cpp  UILoadingBar.cpp  UISlider.cpp  UITextAtlas.cpp  UITextBMFont.cpp  UITextField.cpp
linux-build/: CMakeCache.txt  Makefile  cmake_install.cmake
premake/: GenerateProjects.bat  premake-cocos.lua  premake-external.lua  premake4.lua
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml  project.properties
proj.android/assets/: bullet.plist
proj.android/jni/: Android.mk
proj.ios_mac/Plane.xcodeproj/: project.pbxproj
proj.win32/: Plane.sln
proj.wp8-xaml/: Plane.sln
proj.wp8-xaml/App/: Plane.csproj
tools/premake/: premake4-osx  (+1 more)
(+26 files in other folders)
